[package]
name = "retasync_cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "retasyncd"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
retasync_control_plane = { path = "../retasync_control_plane" }
retasync_mesh_bridge = { path = "../retasync_mesh_bridge" }
retasync_storage = { path = "../retasync_storage" }
serde.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
