[package]
name = "retasync_mesh_bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
retasync_contract = { path = "../retasync_contract" }
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
